--- a/IdMsoAutocomplete/IdMsoAutocomplete.csproj
+++ b/IdMsoAutocomplete/IdMsoAutocomplete.csproj
@@ -51,16 +51,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="IdMsoPackage.cs">
+    <Compile Include="Configuration\Options.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="MsoImageCompletionProviders\ExcelLoader.cs" />
-    <Compile Include="MsoImageCompletionProviders\MsoImageCompletionSource.cs" />
-    <Compile Include="MsoImageCompletionProviders\MsoImageGlyphCompletionProvider.cs" />
-    <Compile Include="MsoImageCompletionProviders\MsoImageTextViewListener.cs" />
+    <Compile Include="Configuration\OptionsPrompt.cs" />
+    <Compile Include="IdMsoPackage.cs" />
+    <Compile Include="DataLoaders\ExcelLoader.cs" />
+    <Compile Include="DataLoaders\ImageLoader.cs" />
+    <Compile Include="CompletionProviders\CompletionSource.cs" />
+    <Compile Include="CompletionProviders\CompletionSourceProvider.cs" />
+    <Compile Include="CompletionProviders\TextViewListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Configuration\OptionsWindow.xaml.cs">
+      <DependentUpon>OptionsWindow.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Dependencies\Microsoft.XmlEditor.dll" />
     <Content Include="Package.ico" />
     <None Include="Key.snk" />
     <Content Include="OfficeData\Office2010\AccessControls.xlsx">
@@ -409,6 +416,11 @@
       <HintPath>..\packages\Microsoft.VisualStudio.Shell.Interop.7.10.6071\lib\Microsoft.VisualStudio.Shell.Interop.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.Shell.Interop.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\packages\Microsoft.VisualStudio.Shell.Interop.10.0.10.0.30319\lib\Microsoft.VisualStudio.Shell.Interop.10.0.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.8.0, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <HintPath>..\packages\Microsoft.VisualStudio.Shell.Interop.8.0.8.0.50727\lib\Microsoft.VisualStudio.Shell.Interop.8.0.dll</HintPath>
       <Private>True</Private>
@@ -446,11 +458,15 @@
       <HintPath>Dependencies\Microsoft.XmlEditor.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
+    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -459,6 +475,12 @@
       <ManifestResourceName>VSPackage</ManifestResourceName>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Configuration\OptionsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
