--- a/IdMsoAutocomplete/IdMsoAutocomplete.2015.csproj
+++ b/IdMsoAutocomplete/IdMsoAutocomplete.2015.csproj
@@ -53,6 +53,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Completion\CommandFilter.cs" />
     <Compile Include="Configuration\Options.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -60,16 +61,16 @@
     <Compile Include="IdMsoPackage.cs" />
     <Compile Include="DataLoaders\ExcelLoader.cs" />
     <Compile Include="DataLoaders\ImageLoader.cs" />
-    <Compile Include="CompletionProviders\CompletionSource.cs" />
-    <Compile Include="CompletionProviders\CompletionSourceProvider.cs" />
-    <Compile Include="CompletionProviders\TextViewListener.cs" />
+    <Compile Include="Completion\CompletionSource.cs" />
+    <Compile Include="Completion\CompletionSourceProvider.cs" />
+    <Compile Include="Completion\TextViewListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration\OptionsWindow.xaml.cs">
       <DependentUpon>OptionsWindow.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Dependencies\Microsoft.XmlEditor.dll" />
+    <None Include="Dependencies\14\Microsoft.XmlEditor.dll" />
     <Content Include="Package.ico" />
     <None Include="source.extension.2015.vsixmanifest" />
     <None Include="Key.snk" />
