--- a/IdMsoAutocomplete/IdMsoAutocomplete.2015.csproj
+++ b/IdMsoAutocomplete/IdMsoAutocomplete.2015.csproj
@@ -53,7 +53,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Completion\CommandFilter.cs" />
+    <Compile Include="CompletionSupport\CommandFilter.cs" />
     <Compile Include="Configuration\Options.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -61,9 +61,9 @@
     <Compile Include="IdMsoPackage.cs" />
     <Compile Include="DataLoaders\ExcelLoader.cs" />
     <Compile Include="DataLoaders\ImageLoader.cs" />
-    <Compile Include="Completion\CompletionSource.cs" />
-    <Compile Include="Completion\CompletionSourceProvider.cs" />
-    <Compile Include="Completion\TextViewListener.cs" />
+    <Compile Include="CompletionSupport\CompletionSource.cs" />
+    <Compile Include="CompletionSupport\CompletionSourceProvider.cs" />
+    <Compile Include="CompletionSupport\TextViewListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration\OptionsWindow.xaml.cs">
       <DependentUpon>OptionsWindow.xaml</DependentUpon>
