--- a/IdMsoAutocomplete/IdMsoAutocomplete.2013.csproj
+++ b/IdMsoAutocomplete/IdMsoAutocomplete.2013.csproj
@@ -432,6 +432,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
