--- a/IdMsoAutocomplete/IdMsoAutocomplete.2019.csproj
+++ b/IdMsoAutocomplete/IdMsoAutocomplete.2019.csproj
@@ -448,10 +448,13 @@
       <Version>4.5.3.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK">
-      <Version>16.0.205</Version>
+      <Version>16.10.31321.278</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Validation">
+      <Version>16.10.35</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools">
-      <Version>16.6.2057</Version>
+      <Version>16.11.35</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
